rkerancherk8sCluster/files/simpleapp/banana.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: banana-app
  labels:
    app: banana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: banana
  template:
    metadata:
      labels:
        app: banana
    spec:
      #topologySpreadConstraints:
      #- maxSkew: 1
      #topologyKey: zone
      #whenUnsatisfiable: DoNotSchedule
      containers:
        - name: banana-app
          image: hashicorp/http-echo
          args:
            - "-text=banana"
          ports:
            - containerPort: 5678

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
