rkerancherk8sCluster/files/simpleapp/ingress-direct-nodns.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: example-ingress
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apple
        pathType: Prefix
      - backend:
          service:
            name: banana-service
            port:
              number: 5678
        path: /banana
        pathType: Prefix
